--- a/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
+++ b/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
@@ -891,5 +891,8 @@ panelDividerHorizontal{
 .selectedNodetrue span{
     font-weight:bold;    
 }
+.iceTree a:hover .iceOutTxt {
+    color: #318496;
+}
 /* END TREE */
 
